--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   bitcoin-core:
-    build: ./bitcoin-core
+    image: lncm/bitcoind:v27.0
     container_name: bitcoin-core
     command:
       -conf=/home/bitcoin/.bitcoin/bitcoin.conf
@@ -14,9 +14,10 @@ services:
       - "18443"
       - "18444"
     environment:
-      - "BITCOIN_DATA=/home/bitcoin/volume/data"
+      - "DIR=/home/bitcoin/volume/data"
     volumes:
       - "./volumes/core_data:/home/bitcoin/volume"
+      - "./volumes/bitcoin.conf:/home/bitcoin/.bitcoin/bitcoin.conf"
 
   electrumx:
     image: lukechilds/electrumx:v1.16.0
