fix mistake in rpc variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - "COIN=BitcoinSegwit"
       - "NET=mainnet"
-      - "DAEMON_URL=http://${RPC_USER}:${RPC_PASSWORD}=@bitcoin-core:8332"
+      - "DAEMON_URL=http://${RPC_USER}:${RPC_PASSWORD}@bitcoin-core:8332"
       - "BANNER_FILE=/data/banner.txt"
       - "ANON_LOGS=foo"
       - "DONATION_ADDRESS=3ML6FiEjS8NA7heekvJE5SfhAoEezsdK8f"
